test/spec_vectors/simd_splat/fail/module_10.wat
(module (func (result v128) i32x4.splat (f64.const 2.0)))